Fix for widescreen video on mobile + second video paused for kaowi

--- a/styles.css
+++ b/styles.css
@@ -1994,6 +1994,12 @@ CSS : MOBILE + TABLETTES
     aspect-ratio: 1/1;
   }
 
+  .project_video.widescreen {
+    max-width: 100%;
+    max-height: 100%;
+    aspect-ratio: 16/9;
+  }
+
   .project_vertical_double {
     max-width: 36vw;
     max-height: 56vh;
